[gd_scene load_steps=35 format=3 uid="uid://q15j426yec4c"]

[ext_resource type="Script" uid="uid://d32vn7atfswgq" path="res://Prefabs/enemy_flying.gd" id="1_3ixh4"]
[ext_resource type="Texture2D" uid="uid://c0ba2fk7pn0mf" path="res://Assets/Sprites/enemys/spiderRobots/1-FlyRobot.png" id="2_cpwlg"]
[ext_resource type="Texture2D" uid="uid://b4bwnu5wwg6kv" path="res://icon.svg" id="3_cpwlg"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lgw76"]
radius = 6.955178
height = 13.910356

[sub_resource type="CircleShape2D" id="CircleShape2D_vjp3r"]
radius = 9.01229

[sub_resource type="Animation" id="Animation_leowk"]
resource_name = "Idle"
length = 0.33333668
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("1FlyRobot_sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_cpwlg")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("1FlyRobot_sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("1FlyRobot_sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.033333335, 0.06666667, 0.10000001, 0.13333334, 0.16666667, 0.20000002, 0.23333335, 0.26666668, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}

[sub_resource type="Animation" id="Animation_lgw76"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("1FlyRobot_sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_cpwlg")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("1FlyRobot_sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("1FlyRobot_sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("1FlyRobot_sprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("1FlyRobot_sprite:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_30yes"]
resource_name = "attack"
length = 0.8
step = 24.0

[sub_resource type="Animation" id="Animation_80imi"]
resource_name = "death"
length = 0.25000417
step = 0.041666668
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("1FlyRobot_sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.99732023, 0.0007559061, 0.2167654, 1), Color(0.99732023, 0.0007559061, 0.2167654, 1), Color(0.99607843, 0, 0.21568628, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("1FlyRobot_sprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.125),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.5707964]
}

[sub_resource type="Animation" id="Animation_n7q57"]
resource_name = "takeDamege"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("1FlyRobot_sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.13333334, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.99732023, 0.0007558934, 0.2167654, 1), Color(0.99732023, 0.0007558934, 0.2167654, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_t4g6b"]
resource_name = "walk"
length = 0.66667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("1FlyRobot_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.033333335, 0.099999994, 0.16666667, 0.23333333, 0.3, 0.36666667, 0.43333334, 0.5, 0.56666666, 0.6333333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lgw76"]
_data = {
&"Idle": SubResource("Animation_leowk"),
&"RESET": SubResource("Animation_lgw76"),
&"attack": SubResource("Animation_30yes"),
&"death": SubResource("Animation_80imi"),
&"takeDamege": SubResource("Animation_n7q57"),
&"walk": SubResource("Animation_t4g6b")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_n7q57"]
animation = &"attack"
use_custom_timeline = true
timeline_length = 4.5
stretch_time_scale = true
start_offset = 0.0
loop_mode = 0

[sub_resource type="AnimationNodeTimeSeek" id="AnimationNodeTimeSeek_80imi"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_osttl"]
graph_offset = Vector2(-70.98349, -12.842979)
nodes/output/position = Vector2(780, 100)
nodes/Animation/node = SubResource("AnimationNodeAnimation_n7q57")
nodes/Animation/position = Vector2(320, 120)
nodes/TimeSeek/node = SubResource("AnimationNodeTimeSeek_80imi")
nodes/TimeSeek/position = Vector2(540, 100)
node_connections = [&"output", 0, &"TimeSeek", &"TimeSeek", 0, &"Animation"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_osttl"]
animation = &"death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lgw76"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_80imi"]
animation = &"takeDamege"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_30yes"]
animation = &"walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_n7q57"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_80imi"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_osttl"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_g7nnu"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kuc4i"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ggq53"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xk43f"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4r6ty"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_x0wuq"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1ox27"]
switch_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fax4q"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mxgsx"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hwma7"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_t4g6b"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_30yes"]
states/End/position = Vector2(1112.1016, 103)
states/Start/position = Vector2(166.36719, 91)
states/attack/node = SubResource("AnimationNodeBlendTree_osttl")
states/attack/position = Vector2(632.33997, 91)
states/death/node = SubResource("AnimationNodeAnimation_osttl")
states/death/position = Vector2(868.4298, 129.3786)
states/idle/node = SubResource("AnimationNodeAnimation_lgw76")
states/idle/position = Vector2(454.34384, 91)
states/takeDamege/node = SubResource("AnimationNodeAnimation_80imi")
states/takeDamege/position = Vector2(777.4298, 263.59344)
states/walk/node = SubResource("AnimationNodeAnimation_30yes")
states/walk/position = Vector2(524.27356, 213.59344)
transitions = ["idle", "walk", SubResource("AnimationNodeStateMachineTransition_n7q57"), "walk", "idle", SubResource("AnimationNodeStateMachineTransition_80imi"), "attack", "walk", SubResource("AnimationNodeStateMachineTransition_osttl"), "walk", "attack", SubResource("AnimationNodeStateMachineTransition_g7nnu"), "idle", "attack", SubResource("AnimationNodeStateMachineTransition_kuc4i"), "attack", "idle", SubResource("AnimationNodeStateMachineTransition_ggq53"), "attack", "takeDamege", SubResource("AnimationNodeStateMachineTransition_xk43f"), "takeDamege", "idle", SubResource("AnimationNodeStateMachineTransition_4r6ty"), "walk", "takeDamege", SubResource("AnimationNodeStateMachineTransition_x0wuq"), "idle", "takeDamege", SubResource("AnimationNodeStateMachineTransition_1ox27"), "takeDamege", "walk", SubResource("AnimationNodeStateMachineTransition_fax4q"), "takeDamege", "death", SubResource("AnimationNodeStateMachineTransition_mxgsx"), "death", "End", SubResource("AnimationNodeStateMachineTransition_hwma7"), "Start", "idle", SubResource("AnimationNodeStateMachineTransition_t4g6b")]
graph_offset = Vector2(279.3529, 24.378593)

[node name="Enemy_base" type="CharacterBody2D" groups=["Enemy"]]
scale = Vector2(-1, 1)
script = ExtResource("1_3ixh4")

[node name="1FlyRobot_sprite" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0.35258535, 4.046828)
texture = ExtResource("2_cpwlg")
flip_h = true
hframes = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_lgw76")

[node name="area_dano" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_dano"]
shape = SubResource("CircleShape2D_vjp3r")
debug_color = Color(0.94266504, 0.24080265, 0.027706947, 0.41960785)

[node name="hitbox" type="Sprite2D" parent="area_dano"]
visible = false
modulate = Color(0.11076216, 0.11076217, 0.11076217, 1)
self_modulate = Color(0.25490198, 1, 1, 1)
position = Vector2(14.672202, -11.591963)
scale = Vector2(0.06690135, -0.051375628)
texture = ExtResource("3_cpwlg")
offset = Vector2(-63.50493, 2.5622025)

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(0, 6.18238)
target_position = Vector2(-11.591963, 0)
collision_mask = 15
hit_from_inside = true
collide_with_areas = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_lgw76")
}
speed_scale = 0.301

[node name="AnimationTree" type="AnimationTree" parent="." groups=["Enemies"]]
tree_root = SubResource("AnimationNodeStateMachine_30yes")
anim_player = NodePath("../AnimationPlayer")
parameters/attack/TimeSeek/seek_request = -1.0

[node name="attack_raycast" type="RayCast2D" parent="."]
visible = false
target_position = Vector2(-41.731068, 0)
collision_mask = 4

[connection signal="body_entered" from="area_dano" to="." method="_on_area_2d_body_entered"]
[connection signal="animation_finished" from="AnimationTree" to="." method="_on_animation_tree_animation_finished"]
